// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Upgrade is available (1.0.0 -> 2.0.0) Shows correct final message 1`] = `
"[32m✔[39m [38;2;11;131;121m[39m
  [38;2;11;131;121m╭ Redwood Upgrade Available: 1.0.0 -> 2.0.0 ─────────────────────────────────────╮[39m
  [38;2;11;131;121m│[39m  Checklist:                                                                    [38;2;11;131;121m│[39m
  [38;2;11;131;121m│[39m   1. Read the release notes at: https://github.com/redwoodjs/redwood/releases  [38;2;11;131;121m│[39m
  [38;2;11;131;121m│[39m   2. Run "yarn rw upgrade" to upgrade                                          [38;2;11;131;121m│[39m
  [38;2;11;131;121m╰────────────────────────────────────────────────────────────────────────────────╯[39m
  [38;2;11;131;121m[39m
"
`;

exports[`Upgrade is available (1.0.0-canary.100 -> 1.0.0-canary.200) Shows correct final message 1`] = `
"[32m✔[39m [38;2;11;131;121m[39m
  [38;2;11;131;121m╭ Redwood Upgrade Available: 1.0.0-canary.100 -> 1.0.0-canary.200 ───────────────╮[39m
  [38;2;11;131;121m│[39m  Checklist:                                                                    [38;2;11;131;121m│[39m
  [38;2;11;131;121m│[39m   1. Read the release notes at: https://github.com/redwoodjs/redwood/releases  [38;2;11;131;121m│[39m
  [38;2;11;131;121m│[39m   2. Run "yarn rw upgrade" to upgrade                                          [38;2;11;131;121m│[39m
  [38;2;11;131;121m╰────────────────────────────────────────────────────────────────────────────────╯[39m
  [38;2;11;131;121m[39m
"
`;

exports[`Upgrade is not available (1.0.0 -> 1.0.0) Shows correct final message 1`] = `
"[32m✔[39m No upgrade is available
"
`;
